--- a/exampleSite/content/blog/post-2022-12-13.md
+++ b/exampleSite/content/blog/post-2022-12-13.md
@@ -1,7 +1,7 @@
 ---
-title: "Etude posturale"
+title: "J-20 étude posturale"
 date: 2022-12-13T10:07:47+01:00
-draft: true
+draft: false
 
 # post thumb
 image: "images/post/etude-posturale.jpg"
@@ -11,19 +11,88 @@ description: "étude posturale"
 
 # taxonomies
 categories: 
-  - "Etude posturale"
+  - "Cyclisme"
 tags:
   - "Cyclisme"
-  - "Posture"
+  - "Etude posturale"
 
 # post type
-type: "post"
+#type: "post"
+type: "featured"
 ---
 
 ## L'étude posturale, qu'est-ce que c'est?
 
-## Pourquoi?
+Une étude posturale va chercher à trouver la position biomécanique optimale d'une personne sur un
+vélo.
 
-## Comment?
+## Pourquoi s'embêter avec une étude posturale?
 
-## Où?
+Jusqu'à cette première étude posturale, je réglais mes vélos de la même
+manière:
+- [méthode Lemond](https://blog.2peak.com/fr/trouver-la-bonne-hauteur-de-selle/) pour la hauteur
+de selle (distance pédalier <-> selle = 0.883 x entrejambe)
+- placement des cales au niveau du métatarse extérieur
+- selle avancée de manière à avoir le genou au niveau de la pointe du pied quand le pédalier est à neuf heures
+
+Malheureusement, j'ai eu quelques problèmes au genou par le passé et je souhaitais éliminer la
+possibilité que ces problèmes puissent revenir.
+
+De plus, comme on va le voir dans la prochaine section, une étude posturale complète va bien plus
+loin que ces réglages primitifs.
+
+Finalement, l'étude posturale peut avoir différents objectifs suivant le profil du cycliste.
+
+Dans notre cas, le but affiché était de maximiser le confort à vélo et éviter les blessures
+articulaires.
+
+Un cycliste visant un bon résultat à une cyclosportive pourrait envisager une étude posturale afin
+d'améliorer son aérodynamisme et/ou son efficacité de pédalage.
+
+## Dans les faits, comment ça marche?
+
+Pour nous, l'étude posturale a commencé par une prise de mensurations:
+
+- taille
+- entrejambe
+- distance entre les épaules
+- taille des pieds
+- positions des métatarses (os des pieds extérieurs)
+- etc
+
+A l'issue de ces prises de mesure, le logiciel utilisé est capable de donner différentes cotes
+telles que la distance selle-potence ou la distance boîtier de pédalier-selle.
+
+On procède aussi au réglage des cales à ce moment.
+
+Ces cotes sont reportées sur un trainer complètement ajustable (c.f. photo), elles donnent une
+première idée des règlages nécessaires.
+
+On a ensuite été branché de capteurs tel que sur la photo. Une caméra spéciale enregistre nos
+mouvements de pédalage et informe de certains angles critiques:
+
+- bras -> épaule -> dos
+- dos -> bassin -> fémur
+- fémur -> genou -> tibia
+- tibia -> cheville -> pied
+
+Chacun de ces angles doit normalement entrer dans un intervalle particulier. Par exemple, l'angle
+bras -> épaule -> dos doit être compris entre 60° et 110°.
+
+Grâce aux angles mesurés et les intervalles attendus, on procède aux ajustements nécessaires.
+
+La position définitive trouvée, les cotes finales sont reportées sur notre vélo.
+
+On peut aussi aller plus loin en analysant le pédalage et les points de pression sur les cales.
+
+## Où procéder à une étude posturale?
+
+Personnellement, j'ai demandé à mon marchand de vélo préféré des adresses. Le bouche à oreille
+étant, selon moi, le meilleur moyen de trouver une bonne étude posturale.
+
+Méfiez-vous toutefois, l'étude posturale gagnant récemment en popularité, nombre de magasins de
+vélo envoie un commercial faire une formation Shimano d'une semaine et se vante rapidement expert
+en étude posturale sans avoir acquis aucun savoir faire.
+
+A noter que des professionnels médicaux, tels que des podologues, pratiquent aussi les études
+posturales.
