--- a/exampleSite/content/blog/post-2022-12-20.md
+++ b/exampleSite/content/blog/post-2022-12-20.md
@@ -1,17 +1,17 @@
 ---
 title: "J-13 logos"
 date: 2022-12-20T18:07:47+01:00
-draft: true
+draft: false
 
 # post thumb
-image: "images/post/logo.png"
+#image: "images/post/logo.png"
 
 # meta description
 description: "logos"
 
 # taxonomies
 categories: 
-  - "Cyclisme"
+- "Cyclisme"
 tags:
   - "Cyclisme"
   - "Logos"
@@ -41,11 +41,11 @@ logos personnalisés. La prochaine étape est d'en faire des autocollants pour n
 
 ![image](../../images/post/logo_nico.png)
 
-> ...
+> Inspiré des photos Tokyo Neon, les frérots à vélo écrit en japonais
 
 ### Logo Nathan
 
-![image](../../images/post/logo_nathan.png)
+![image](../../images/post/logo_nath.png)
 
 > ...
 
