--- a/exampleSite/content/blog/post-2022-12-20.md
+++ b/exampleSite/content/blog/post-2022-12-20.md
@@ -4,7 +4,7 @@ date: 2022-12-20T18:07:47+01:00
 draft: false
 
 # post thumb
-#image: "images/post/logo.png"
+image: "images/post/logo_ben.png"
 
 # meta description
 description: "logos"
