--- a/exampleSite/content/blog/post-2022-12-23.md
+++ b/exampleSite/content/blog/post-2022-12-23.md
@@ -13,11 +13,11 @@ description: "sangle de transport"
 categories: 
   - "Cyclisme"
   - "Aventure"
-  - "Technique“
+  - "Technique"
 tags:
   - "Cyclisme"
   - "Aventure"
-  - "Technique“
+  - "Technique"
 
 # post type
 type: "post"
