--- a/exampleSite/content/blog/post-2022-12-25.md
+++ b/exampleSite/content/blog/post-2022-12-25.md
@@ -32,7 +32,7 @@ nuit!
 ![image](../../images/post/niolon_view.jpg)
 
 L'aller-retour c'est 432 mètres d'élévation en 22 kilomètres parcourus, de quoi brûler les graisses
-accumulés la veille au soir et les doigts sur le disque de frein comme dans cette vidéo de la
+accumulées la veille au soir et les doigts sur le disque de frein comme dans cette vidéo de la
 descente ☺️.
 
 {{< youtube NwTfnfL2qpM >}}
