use strava embed

--- a/exampleSite/content/blog/post-2023-01-01.md
+++ b/exampleSite/content/blog/post-2023-01-01.md
@@ -36,6 +36,8 @@ Ascension de nuit donc et bien sûr venteuse (je ne me souviens pas avoir fait c
 
 La réception est fermée, on plante la tente néanmoins et nous endormons paisiblement.
 
-Compteur kilomètres débloqué! 
+Compteur kilométrique débloqué! 
 
- ![image](../../images/post/map_01_01.png)
+{{< rawhtml >}}
+<div class="strava-embed-placeholder" data-embed-type="activity" data-embed-id="8322205172"></div><script src="https://strava-embeds.com/embed.js"></script>
+{{< /rawhtml >}}
