sort out featured

--- a/exampleSite/content/blog/post-2022-12-13.md
+++ b/exampleSite/content/blog/post-2022-12-13.md
@@ -17,8 +17,7 @@ tags:
   - "Etude posturale"
 
 # post type
-#type: "post"
-type: "featured"
+type: "post"
 ---
 
 ## L'étude posturale, qu'est-ce que c'est?
