--- a/exampleSite/content/blog/post-2022-12-29.md
+++ b/exampleSite/content/blog/post-2022-12-29.md
@@ -22,8 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-#type: "post"
-type: "featured"
+type: "post"
 ---
 
 ## Les saintes Maries et la tong perdue
