--- a/exampleSite/content/blog/post-2023-01-04.md
+++ b/exampleSite/content/blog/post-2023-01-04.md
@@ -21,8 +21,8 @@ tags:
 type: "featured"
 ---
 
-La réparation de la carie se fait en 2 fois, nous sommes donc obligés de rester un jour de plus.
+La réparation de la carie se fait en deux fois, nous sommes donc obligés de rester un jour de plus à Hyères.
 
-On en profite pour imprimer [nos autocollants](https://lesfrerotsavelo.com/blog/post-2022-12-20/) et changer les bagages avant de Nicolas et Nathan car certains ont mal vécu le voyage aux Saintes Maries et sont revenus plus gruyère que sac.
+On en profite pour imprimer [nos autocollants](https://lesfrerotsavelo.com/blog/post-2022-12-20/) et changer les bagager avants de Nicolas et Nathan car certains ont mal vécu le voyage aux Saintes Maries et sont revenus plus gruyère que sac.
 
 On repart aussi sur une randonnée aquatique, nos articulations nous remercieront!
