--- a/exampleSite/content/blog/post-2023-01-04.md
+++ b/exampleSite/content/blog/post-2023-01-04.md
@@ -18,7 +18,7 @@ tags:
   - "Aventure" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La réparation de la carie se fait en deux fois, nous sommes donc obligés de rester un jour de plus à Hyères.
