--- a/exampleSite/content/blog/post-2023-01-13.md
+++ b/exampleSite/content/blog/post-2023-01-13.md
@@ -47,6 +47,8 @@ Nicolas et moi délestons Nathan de ses sacs de fourche pour la dernière bosse:
 
 La descente de sept kilomètres semble le requinquer, on espère une bonne fois pour toute.
 
+Nous arrivons à l'hôtel, le club de bridge est maître des lieux. Nous passons nos vélos entre les tables en essayant de ne pas froisser les septagénaires concentrés.
+
 {{< rawhtml >}} 
 <div class="strava-embed-placeholder" data-embed-type="activity" data-embed-id="8386687128"></div><script src="https://strava-embeds.com/embed.js"></script>
 {{< /rawhtml >}}
