--- a/exampleSite/content/blog/post-2023-01-04.md
+++ b/exampleSite/content/blog/post-2023-01-04.md
@@ -13,6 +13,7 @@ description: "repos inopiné, seconde édition"
 categories:
   - "Cyclisme" 
   - "Aventure" 
+  - "France"
 tags:
   - "Cyclisme" 
   - "Aventure" 
