--- a/exampleSite/content/blog/post-2023-01-08.md
+++ b/exampleSite/content/blog/post-2023-01-08.md
@@ -14,13 +14,15 @@ categories:
   - "Cyclisme" 
   - "Aventure" 
   - "Bikepacking"
+  - "France"
+  - "Italie"
 tags:
   - "Cyclisme" 
   - "Aventure" 
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 ## L'Italie sous la pluie
