--- a/exampleSite/content/blog/post-2023-01-10.md
+++ b/exampleSite/content/blog/post-2023-01-10.md
@@ -14,13 +14,14 @@ categories:
   - "Cyclisme" 
   - "Aventure" 
   - "Bikepacking"
+  - "Italie"
 tags:
   - "Cyclisme" 
   - "Aventure" 
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons le camping qui nous avait très chaleureusement accueilli la veille, le vent souffle toujours autant. Il nous a empêche de dormir, il va nous empêcher de profiter des descentes. 
