--- a/exampleSite/content/blog/post-2023-01-11.md
+++ b/exampleSite/content/blog/post-2023-01-11.md
@@ -14,13 +14,14 @@ categories:
   - "Cyclisme" 
   - "Aventure" 
   - "Bikepacking"
+  - "Italie"
 tags:
   - "Cyclisme" 
   - "Aventure" 
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous nous réveillons sous les oliviers du camping sur les hauteurs de Varazze. 
