--- a/exampleSite/content/blog/post-2023-01-09.md
+++ b/exampleSite/content/blog/post-2023-01-09.md
@@ -14,13 +14,14 @@ categories:
   - "Cyclisme" 
   - "Aventure" 
   - "Bikepacking"
+  - "Italie"
 tags:
   - "Cyclisme" 
   - "Aventure" 
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 ## L'Italie dans le vent
