--- a/exampleSite/content/blog/post-2023-01-12.md
+++ b/exampleSite/content/blog/post-2023-01-12.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons le camping et "profitons" du fait que Nathan soit convalescent pour faire une petite étape en direction de Gênes. 
