--- a/exampleSite/content/blog/post-2023-01-14.md
+++ b/exampleSite/content/blog/post-2023-01-14.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nathan semble aller mieux, nous tentons de tabler sur une journée normale. 
