--- a/exampleSite/content/blog/post-2023-01-15.md
+++ b/exampleSite/content/blog/post-2023-01-15.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
  
 Nous quittons la chambre d'hôte et dehors une pluie fine nous rafraîchit. Nous faisons quelques mètres et le garde boue arrière de Nicolas s'avère dévissé. Un démontage de roue s'impose, sous la pluie bien sûr. 
