--- a/exampleSite/content/blog/post-2023-01-19.md
+++ b/exampleSite/content/blog/post-2023-01-19.md
@@ -35,7 +35,7 @@ Un stop déjeuner s'impose après le labyrinthe florentin. Nous dégustons des p
 
 Nous quittons Prato en direction de Bologne et la pluie, telle une compagne jalouse, nous rejoint. Nous commençons l'ascension de la petite montagne qui nous sépare de Bologne. Les Fiat Panda quatre roues motrices, parfois équipées de pare-buffles, sont légions: nous sommes dans la bonne direction. Nous visons la ville de Montepiano, le "mont plat" en français, comme fin d'étape. 
 
-Pas si plat ce mont: quatre cents mètres de dénivelé positif en moins de neuf kilomètres. Nous atteignons Vernio pour faire des provisions, la pluie se transforme en neige fondue puis en neige. Au fur et à mesure que la route s'élève les flocons s'épaississent, le brouillard aussi. 
+Pas si plat ce mont: quatre cents mètres de dénivelé positif en moins de neuf kilomètres. Nous atteignons Vernio pour faire des provisions, la pluie se transforme en neige fondue puis en neige. Nous ne nous plaignons pas, préférant la neige à la pluie. Au fur et à mesure que la route s'élève les flocons s'épaississent, le brouillard aussi. 
 
 ![image](../../images/post/montepiano_nicoben.jpg)
 ![image](../../images/post/montepiano_ben.jpg)
