--- a/exampleSite/content/blog/post-2023-01-16.md
+++ b/exampleSite/content/blog/post-2023-01-16.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Mon genou a gonflé durant la nuit, nous tablons sur une petite journée à destination de Pise.
