--- a/exampleSite/content/blog/post-2023-01-18.md
+++ b/exampleSite/content/blog/post-2023-01-18.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons Empoli avec une éclaircie, nous n'avions plus vu un rayon de soleil depuis quatre jours. Nous tentons de refaire nos stocks de vitamine D en quelques minutes!
