--- a/exampleSite/content/blog/post-2023-01-19.md
+++ b/exampleSite/content/blog/post-2023-01-19.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous naviguons pour sortir de Florence parmi le dédale de voies rapides, centres commerciaux et zones industrielles. Mais il fait beau et frais sans trop de vent, des conditions idéales pour rouler. 
