--- a/exampleSite/content/blog/post-2023-01-21.md
+++ b/exampleSite/content/blog/post-2023-01-21.md
@@ -1,5 +1,5 @@
 ---
-title: "J+20 Boulogne -> Ferrare"
+title: "J+20 Bologne -> Ferrare"
 date: 2023-01-21T22:38:47+01:00
 draft: false
 
@@ -7,7 +7,7 @@ draft: false
 image: "images/post/ferrara_velos.jpg"
 
 # meta description
-description: "Boulogne -> Ferrare"
+description: "Bologne -> Ferrare"
 
 # taxonomies
 categories:
