--- a/exampleSite/content/blog/post-2023-01-20.md
+++ b/exampleSite/content/blog/post-2023-01-20.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Il a neigé une bonne partie de la nuit et il neige toujours. Le thermomètre affiche moins deux degrés.
