--- a/exampleSite/content/blog/post-2023-01-21.md
+++ b/exampleSite/content/blog/post-2023-01-21.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le temps est presque parfait: sec mais nuageux avec une très légère pointe de vent. Nous profitons de cette aubaine pour prendre soin de nos machines. Dégraissage, lavage et lubrification sont au programme dans la banlieue bolognaise. Nous refaisons aussi la pression des pneus que nous avions réduite pour faire face à l'épisode neigeux de ces derniers jours. 
