--- a/exampleSite/content/blog/post-2023-01-22.md
+++ b/exampleSite/content/blog/post-2023-01-22.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous partons sous une pluie fine qui disparaît rapidement, la journée commence bien. Nous traversons le fleuve Pô et quittons l'Emilie-Romagne pour rejoindre la région de la Vénétie. Quelques encâblures plus loin, nous célébrons nos mille kilomètres parcourus depuis notre départ le premier janvier. Cela semble déjà si loin. 
