--- a/exampleSite/content/blog/post-2023-01-23.md
+++ b/exampleSite/content/blog/post-2023-01-23.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Une journée de récupération active est au programme aujourd'hui avec la trentaine de kilomètres qui nous sépare de Venise. La journée démarre par la descente du vélo, cette fois par ascenseur. 
