--- a/exampleSite/content/blog/post-2023-01-24.md
+++ b/exampleSite/content/blog/post-2023-01-24.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous commençons notre journée en nous rendant à un novotel quatre étoiles pour collecter des paniers anti-gaspillage (via l'application [toogoodtogo](https://toogoodtogo.fr/fr/)). Pour huit euros, nous mangeons:
