--- a/exampleSite/content/blog/post-2023-01-25.md
+++ b/exampleSite/content/blog/post-2023-01-25.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le soleil nous réveille et nous décidons de ranger nos imperméables comme pour lancer un défi à la pluie. Nous verrons si notre stratégie aura été payante en fin de journée. 
