--- a/exampleSite/content/blog/post-2023-01-26.md
+++ b/exampleSite/content/blog/post-2023-01-26.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nathan a mal au genou gauche, nous limitons notre journée et prenons la direction de Trieste. 
