--- a/exampleSite/content/blog/post-2023-01-27.md
+++ b/exampleSite/content/blog/post-2023-01-27.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking"
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous refaisons le tour des pharmacies car Nathan n'a pas trouvé genouillère à son genou hier. Après quatre pharmacies, il trouve son bonheur. 
