--- a/exampleSite/content/blog/post-2023-01-30.md
+++ b/exampleSite/content/blog/post-2023-01-30.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous commençons notre journée sur un banc dans le port d'Izola à guetter l'arrivée du livreur. Par chance, il n'y a aucun nuage. Il arrive sur les coups de onze heures trente avec notre colis! 
