--- a/exampleSite/content/blog/post-2023-01-31.md
+++ b/exampleSite/content/blog/post-2023-01-31.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons Buzet et la rivière Mirna et retournons dans les vallons. 
