--- a/exampleSite/content/blog/post-2023-02-01.md
+++ b/exampleSite/content/blog/post-2023-02-01.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Cette journée marque notre premier mois d'aventure!
