--- a/exampleSite/content/blog/post-2023-02-02.md
+++ b/exampleSite/content/blog/post-2023-02-02.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons notre chambre à dix heures quarante, le soleil n'a toujours pas percé, le brouillard l'en empêche. 
