--- a/exampleSite/content/blog/post-2023-02-03.md
+++ b/exampleSite/content/blog/post-2023-02-03.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La nuit a été mouvementée, le vent claquait les volets des maisons environnantes par ses rafales à quatre-vingt kilomètres à l'heure. Par chance, à notre levé tout s'est calmé. 
