--- a/exampleSite/content/blog/post-2023-02-04.md
+++ b/exampleSite/content/blog/post-2023-02-04.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous traversons la plaine  pour rallier zadar. La route est plus fréquentée, moins belle et plus sale, dommage. 
