--- a/exampleSite/content/blog/post-2023-02-05.md
+++ b/exampleSite/content/blog/post-2023-02-05.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le repos est au programme aujourd'hui, levé sur les coups de onze heures puis visite de la ville. Malheureusement, la plupart des points d'intérêt sont fermés au public hors saison. Nous passons tout de même à côté de la cathédrale Saint-Jacques. 
