--- a/exampleSite/content/blog/post-2023-02-06.md
+++ b/exampleSite/content/blog/post-2023-02-06.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le vent s'est un tout petit peu calmé. La température est de 3°C mais le ressenti -5°C. Nous rejoignons la D8 et commençons à rouler. Le froid se fait ressentir rapidement surtout au niveau des mains. Aux grands maux les grands remèdes: nous glissons des gants en plastique entre nos sous-gants et nos gants. Elles permettent de parer un peu le vent et de garder la chaleur. Nous les piquons aux stations-service. 
