--- a/exampleSite/content/blog/post-2023-02-09.md
+++ b/exampleSite/content/blog/post-2023-02-09.md
@@ -58,7 +58,7 @@ Nous finissons sur un dessert qui nous est cher depuis la Slovénie: le Čokolin
 
 ![image](../../images/post/dubrovnik_cokolino.jpg)
 
-Une fois ce repas englouti, nous nous perdons dans les petites rues de la vieille ville de Dubrovnik. Il y a plus de chats errants que de personnes!
+Une fois ce repas englouti, nous nous perdons dans les petites rues et nombreux escaliers qui composent la vieille ville de Dubrovnik. Il y a plus de chats errants que de personnes!
 
 ![image](../../images/post/dubrovnik_chat.jpg)
 ![image](../../images/post/dubrovnik_eglise.jpg)
