--- a/exampleSite/content/blog/post-2023-02-07.md
+++ b/exampleSite/content/blog/post-2023-02-07.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons Split et rejoignons la D8 après quelques kilomètres sans trop de difficultés. 
