--- a/exampleSite/content/blog/post-2023-02-08.md
+++ b/exampleSite/content/blog/post-2023-02-08.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons notre appartement d'un soir et rejoignons la D8 par la petite descente. 
