--- a/exampleSite/content/blog/post-2023-02-09.md
+++ b/exampleSite/content/blog/post-2023-02-09.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous remontons les pentes raides du petit village de Kormana pour rejoindre la D8. La pente à quinze pourcents fait office d'échauffement. 
