--- a/exampleSite/content/blog/post-2023-02-10.md
+++ b/exampleSite/content/blog/post-2023-02-10.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons Dubrovnik en direction de la frontière monténégrine et apercevons la vieille ville que nous avons exploré hier soir.
