--- a/exampleSite/content/blog/post-2023-02-11.md
+++ b/exampleSite/content/blog/post-2023-02-11.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Réveil à neuf heures à la lumière du soleil qui traverse nos fenêtres sans volets. Après un petit-déjeuner copieux, nous arpentons les petites rues de la ville médiévale. 
