--- a/exampleSite/content/blog/post-2023-02-12.md
+++ b/exampleSite/content/blog/post-2023-02-12.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La journée commence avec la descente depuis nos combles aménagés au troisième étage. 
