--- a/exampleSite/content/blog/post-2023-02-14.md
+++ b/exampleSite/content/blog/post-2023-02-14.md
@@ -42,7 +42,7 @@ Dès la banlieue, nous faisons face aux automobilistes peu scrupuleux en plus de
 
 {{< youtube GGOxfsX23XY >}}
 
-L'eau du robinet n'est plus potable, nous achetons une bouteille de dix litres pour l'équivalent d'un euro. Les provisions faites nous déambulons dans la ville qui est décorée pour la Saint-Valentin. Malheureusement, la pyramide, qui est l'attraction principale de la ville est fermée pour travaux. Même en sautant par dessus les barrières opaques de deux mètres de haur, nous n'apercevons que de maigres détails. Dommage. 
+L'eau du robinet n'est plus potable, nous achetons une bouteille de dix litres pour l'équivalent d'un euro. Les provisions faites nous déambulons dans la ville qui est décorée pour la Saint-Valentin. Malheureusement, la pyramide, qui est l'attraction principale de la ville, est fermée pour travaux. Même en sautant par dessus les barrières opaques de deux mètres de haut, nous n'apercevons que de maigres détails. Dommage. 
 
 ![image](../../images/post/tirana_tour.jpg)
 ![image](../../images/post/tirana_mosquee.jpg)
