--- a/exampleSite/content/blog/post-2023-02-13.md
+++ b/exampleSite/content/blog/post-2023-02-13.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "poat"
 ---
 
 Nous quittons Bar et faisons l'ascension vers une petite route de campagne en mauvaise condition mais peu empruntée. Tout est affaire de compromis.
