--- a/exampleSite/content/blog/post-2023-02-14.md
+++ b/exampleSite/content/blog/post-2023-02-14.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Il est six heures quarante, l'appel à la prière du levée de soleil retentit dans la ville pendant un bon quart d'heure. Il est suivi des pleurs d'un nourrisson qui, comme nous, ne semble pas être habitué au réveil aux aurores. Nous prolongeons notre nuit jusqu'à huit heures. La journée s'annonce longue avec les cent kilomètres qui nous séparent de la capitale albanaise Tirana. 
