--- a/exampleSite/content/blog/post-2023-02-15.md
+++ b/exampleSite/content/blog/post-2023-02-15.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Par chance, il n'y a pas eu d'appel à la prière ce matin, nous saisissons l'opportunité pour faire une grasse matinée jusqu'à huit heures quarante-cinq. 
