--- a/exampleSite/content/blog/post-2023-02-17.md
+++ b/exampleSite/content/blog/post-2023-02-17.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous sortons de Vlorë par une petite montée qui nous sert d'échauffement. Avant de partir, nous nous sommes rendus compte qu'il n'y a pas de voie pavée allant dans la direction que nous souhaitons sans revenir en arrière sur trente kilomètres. Nous savons que les heures de ce bitume sont comptées, nous le savourons. 
