--- a/exampleSite/content/blog/post-2023-02-16.md
+++ b/exampleSite/content/blog/post-2023-02-16.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Hier soir, le rouleau que nous utilisions pour nous masser s'est cassé. Nous sommes très déçus du produit qui nous aura duré seulement quarante-cinq jour. La camelote de la marque Sveltus est à eviter. Une chance que nous avions pris des balles de tennis en redondance. 
