--- a/exampleSite/content/blog/post-2023-02-18.md
+++ b/exampleSite/content/blog/post-2023-02-18.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous visons une petite étape aujourd'hui et dormons jusqu'à neuf heures. Nous visitons rapidement les murs fortifiés de Tepelenë, la ville de naissance d'Ali Pacha. 
