--- a/exampleSite/content/blog/post-2023-02-19.md
+++ b/exampleSite/content/blog/post-2023-02-19.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Réveillés à neuf heures par une perceuse, nous réalisons que nos jours de repos ne sont que très rarement reposants. 
