--- a/exampleSite/content/blog/post-2023-02-20.md
+++ b/exampleSite/content/blog/post-2023-02-20.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous descendons la ville de Gjirokastër pour rejoindre la SH4 par notre petite rue pavée préférée. 
