--- a/exampleSite/content/blog/post-2023-02-21.md
+++ b/exampleSite/content/blog/post-2023-02-21.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nicolas et Nathan ont ressenti un tremblement de terre dans la nuit. Et en effet il a vraiment eu lieu: 2,4 sur l'échelle de Richter, c'est-à-dire à peine détectable par l'être humain. Pas étonnant que je n'aie pas été perturbé. 
