--- a/exampleSite/content/blog/post-2023-02-22.md
+++ b/exampleSite/content/blog/post-2023-02-22.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous quittons Metsovo et cela continue de grimper. Nous suivons notre itinéraire en direction des Météores. La nationale est apparemment fermée l'hiver. La route semble avoir été déneigée récemment, nous tentons notre chance. 
