--- a/exampleSite/content/blog/post-2023-02-23.md
+++ b/exampleSite/content/blog/post-2023-02-23.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Hier soir, notre hôte, qui parle très bien français, nous a confectionné un flan grec en guise de dessert. Très bon, 9/10.
