--- a/exampleSite/content/blog/post-2023-02-24.md
+++ b/exampleSite/content/blog/post-2023-02-24.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le ciel est couvert ce matin, ce n'était pas arrivé depuis l'Italie soit environ mille cinq cents kilomètres. Nous ne faisons pas quinze kilomètres avant d'être pourchassés par un chien de garde. Il y a vraiment un problème de dressage dans ce pays.
