--- a/exampleSite/content/blog/post-2023-02-25.md
+++ b/exampleSite/content/blog/post-2023-02-25.md
@@ -7,7 +7,7 @@ draft: false
 image: "images/post/thessaloniki_pont.jpg"
 
 # meta description
-description: "Larissa -> Katerini"
+description: "Katerini -> Thessaloniki"
 
 # taxonomies
 categories:
