--- a/exampleSite/content/blog/post-2023-02-25.md
+++ b/exampleSite/content/blog/post-2023-02-25.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Les magasins ferment à quinze heures le samedi en Grèce et lundi sera férié. Cela nous laisse peu d'options pour faire réparer les roues de Nicolas et Nathan. Nous décidons d'arriver le plus tôt possible à Thessaloniki pour laisser au mécanicien le temps de dévoiler les roues. Nous sommes levés à cinq heures trente et commençons à pédaler aux alentours de six heures trente. Il y a cent kilomètres à parcourir. 
