--- a/exampleSite/content/blog/post-2023-02-26.md
+++ b/exampleSite/content/blog/post-2023-02-26.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous poussons la grasse matinée au maximum et nous levons à midi. Nicolas et Nathan finissent de laver leurs vêtements pour finir "la matinée". Il est quinze heures et nous sortons trouver une boulangerie et du beurre de cacahuètes pour demain matin. Malgré les réticences de mes deux compères, je les convaincs de visiter la vieille ville qui est à trois kilomètres, en montée. 
