--- a/exampleSite/content/blog/post-2023-02-27.md
+++ b/exampleSite/content/blog/post-2023-02-27.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Le décrassage est compliqué surtout que sortir de Thessaloniki par le nord consiste en un long faux plat montant. Après quatorze kilomètres, nous dépassons les trois milles kilomètres parcourus et sommes récompensés par une petite descente.
