--- a/exampleSite/content/blog/post-2023-02-28.md
+++ b/exampleSite/content/blog/post-2023-02-28.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La pluie nous attend au réveil. Plus nous avançons, plus elle se renforce. Les automobilistes et camionneurs font fi de notre présence: ils ne ralentissent pas et/ou ne se déportent pas quand ils nous dépassent. Nous n'étions pas assez trempés, il est vrai. 
