--- a/exampleSite/content/blog/post-2023-03-01.md
+++ b/exampleSite/content/blog/post-2023-03-01.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Au réveil, nos affaires mouillés d'hier sont encore humides ce matin. Nous jetons un coup d'œil dehors: le temps semble couvert mais pas de signe de pluie. C'est le branle-bas de combat pour essayer de faire sécher le linge et surtout nos chaussures. Par chance, l'appartement contient deux sèche-cheveux, ils sont réquisitionnés d'office. L'heure du départ arrive, tout est loin d'être sec. Pas grave, ça séchera en roulant. 
