--- a/exampleSite/content/blog/post-2023-03-02.md
+++ b/exampleSite/content/blog/post-2023-03-02.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nico va mieux, nous le laissons se reposer, réveil à neuf heures. 
