--- a/exampleSite/content/blog/post-2023-03-03.md
+++ b/exampleSite/content/blog/post-2023-03-03.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Il est six heures quinze, une pluie fine me tapote le peu d'espace qu'il y a entre le bas de mon bonnet que j'utilise pour occulter la lumière et qui m'arrive juste au dessus du nez et ma doudoune qui s'arrête en dessous de mon nez. Je lance un "il pleut". Tout le monde se réveille. Tout le monde range son sac de couchage. 
