--- a/exampleSite/content/blog/post-2023-03-04.md
+++ b/exampleSite/content/blog/post-2023-03-04.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous partons sous la pluie, comme nous en avons l'habitude ces derniers jours. Nous prenons la direction du nord et de Plovdiv. Un tori-I en pleine campagne bulgare nous donne un avant goût du pays du soleil levant. 
