--- a/exampleSite/content/blog/post-2023-03-05.md
+++ b/exampleSite/content/blog/post-2023-03-05.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous sommes réveillés par le muezzin de Beli Vir à sept heures moins dix puis par une bécasse qui se pose sur notre cabane. Le réveil est difficile, surtout pour Nathan qui a dormi entre deux matelas.
