--- a/exampleSite/content/blog/post-2023-03-08.md
+++ b/exampleSite/content/blog/post-2023-03-08.md
@@ -65,7 +65,7 @@ Nous faisons nos provisions pour le dîner et le petit déjeuner de demain matin
 - peynir helvasi: halva au fromage frais, rien à voir avec le halva au tahini, 8/10
 - kazandibi: le pudding turc caramélisé, 6.5/10
 
-Nous goûtons aussi le thé, les turcs étant parmi les plus gros consommateurs au monde à plus deux kilos d'infusion en moyenne par personne et par an. Ici, il est extrêmement fort et, en conséquence amer. Les turcs l'adoucissent avec beaucoup de sucre. 
+Nous goûtons aussi le thé, les turcs étant parmi les plus gros consommateurs au monde à plus de deux kilos d'infusion en moyenne par personne et par an. Ici, il est extrêmement fort et, en conséquence amer. Les turcs l'adoucissent avec beaucoup de sucre. 
 
 Belle entrée en matière pour la cuisine turque! 
 
