--- a/exampleSite/content/blog/post-2023-03-06.md
+++ b/exampleSite/content/blog/post-2023-03-06.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Après une grasse matinée bien méritée, nous attaquons le nettoyage du vélo. L'appartement où nous résidons contient une petite bouteille de WD40. Malheureusement il n'y a plus de gaz, la bouteille est trop vieille. Aux grands maux, les grands remèdes: nous ouvrons la canette en deux pour récupérer le liquide. Il est hors de question de gâcher du dégraissant. Cependant, nous n'en avons toujours pas assez pour laver les trois chaînes. Nous faisons un petit tour à Mr. Bricolage acheter une nouvelle bouteille. 
