--- a/exampleSite/content/blog/post-2023-03-07.md
+++ b/exampleSite/content/blog/post-2023-03-07.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous sortons de la ville aux sept collines seulement à onze heures. Nous avons dû attendre le propriétaire pendant une heure et quart. Nous traversons les plaines bulgares, le bitume est parfait, le ciel est bleu, le vent est minimal, les kilomètres défilent. Ce serait presque ennuyeux.
