--- a/exampleSite/content/blog/post-2023-03-08.md
+++ b/exampleSite/content/blog/post-2023-03-08.md
@@ -22,7 +22,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Panne de réveil ce matin. Le soleil nous paraît haut. En effet, il est neuf heures. 
