--- a/exampleSite/content/blog/post-2023-03-10.md
+++ b/exampleSite/content/blog/post-2023-03-10.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Réveil tumultueux, je suis le premier à me lever direction la salle de bain et, encore en plein brouillard matinal, me retrouve nez à nez avec un cafard. Nous aurions peut-être dû nous contenter du camping sauvage. 
