--- a/exampleSite/content/blog/post-2023-03-11.md
+++ b/exampleSite/content/blog/post-2023-03-11.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Notre premier jour de repos à Istanbul commence avec un réveil. Istanbul étant une très grosse ville (quasiment seize millions d'habitants, plus grosse ville du continent européen), nous voulons en profiter pour remettre tout notre matériel en ordre de marche pour attaquer le reste du périple l'esprit tranquille. 
