--- a/exampleSite/content/blog/post-2023-03-12.md
+++ b/exampleSite/content/blog/post-2023-03-12.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La journée commence par une coupe de cheveux avec des rasoirs que nous avions achetés la veille. Ils sont de mauvaise qualité et les quatre fois trois lames y passent sur mon crâne. La tonte prend plus de quarante minutes. Nous abandonnons l'idée de couper les cheveux de Nicolas et Nathan avec ce matériel. 
