--- a/exampleSite/content/blog/post-2023-03-14.md
+++ b/exampleSite/content/blog/post-2023-03-14.md
@@ -7,7 +7,7 @@ draft: false
 image: "images/post/bursa_montagneportrait.jpg"
 
 # meta description
-description: "repos à Istanbul, jour 3"
+description: "Istanbul -> Bursa"
 
 # taxonomies
 categories:
