--- a/exampleSite/content/blog/post-2023-03-13.md
+++ b/exampleSite/content/blog/post-2023-03-13.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Direction les rives du Bosphore pour rencontrer Oguzhan, mon ami turque. Il nous invite dans un restaurant spécialisé dans l'İskender kebap.
