--- a/exampleSite/content/blog/post-2023-03-14.md
+++ b/exampleSite/content/blog/post-2023-03-14.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous naviguons le dédale de ruelles jusqu'au ferry qui nous emmène de l'autre côté du détroit. Bien sûr, la machine pour les tickets n'accepte ni la carte ni les billets de deux cents lyres, les seuls que je possède. Un passant utilise sa carte de transport en commun pour nous faire passer. 
