--- a/exampleSite/content/blog/post-2023-03-15.md
+++ b/exampleSite/content/blog/post-2023-03-15.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous visitons rapidement Bursa qui a été une capitale de l'empire ottoman au quatorzième siècle. 
