--- a/exampleSite/content/blog/post-2023-03-16.md
+++ b/exampleSite/content/blog/post-2023-03-16.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Une pluie fine m'apprend que la tôle n'est pas assez grande pour nous abriter tous les trois. Il est deux heures du matin.
