--- a/exampleSite/content/blog/post-2023-03-17.md
+++ b/exampleSite/content/blog/post-2023-03-17.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous reprenons la route sous une pluie fine qui se dissipe à mesure que nous prenons de la hauteur. 
