--- a/exampleSite/content/blog/post-2023-03-18.md
+++ b/exampleSite/content/blog/post-2023-03-18.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 La journée est consacrée à la récupération de celle d'hier et ses cent quatre-vingt-cinq kilomètres. Nous passons la fin de matinée à nous balader dans le quartier et faire des provisions. 
