--- a/exampleSite/content/blog/post-2023-03-19.md
+++ b/exampleSite/content/blog/post-2023-03-19.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Nous prenons un second jour de repos pour visiter la ville. Le tour commence avec l'Asansör, un des nombreux mots turcs issus du français. L'ascenseur date de 1907 et permet d'éviter deux cents trente-sept marches. En bas, nous empruntons la rue où vécut Dario Moreno, chanteur turc populaire en France dans les années cinquante. La rue lui est dédiée avec des sculptures et graffitis, elle porte d'ailleurs son nom. 
