--- a/exampleSite/content/blog/post-2023-03-21.md
+++ b/exampleSite/content/blog/post-2023-03-21.md
@@ -54,7 +54,7 @@ A chaque passage au vert, les locaux essaient de forcer le passage. L'agent bran
 
 ![image](../../images/post/savcilli_coquelicot.jpg)
 
-Nous passons Buharkent et trouvons un abri pour la nuit. C'est le premier jour du printemps et, comme pour marquer le coup, les premiers chants se cigales nous bercent.
+Nous passons Buharkent et trouvons un abri pour la nuit. C'est le premier jour du printemps et, comme pour marquer le coup, les premiers chants de cigales nous bercent.
 
 {{< rawhtml >}} 
 <div class="strava-embed-placeholder" data-embed-type="activity" data-embed-id="8753113682"></div><script src="https://strava-embeds.com/embed.js"></script>
