--- a/exampleSite/content/blog/post-2023-03-20.md
+++ b/exampleSite/content/blog/post-2023-03-20.md
@@ -21,7 +21,7 @@ tags:
   - "Bikepacking" 
 
 # post type
-type: "featured"
+type: "post"
 ---
 
 Après une quinzaine de kilomètres, nous passons l'aéroport d'Izmir et sortons de l'agglomération. Un petit bout de forêt, et nous rejoignons la route qui relie Izmir à Aydin. Après quelques kilomètres, les deux voies en direction d'Izmir sont fermées pour travaux. Très vite, nous comprenons pourquoi. Le revêtement est extrêmement inégal. Nous sommes jabotés jusqu'à Torbali où la nationale est tout simplement fermée. 
